第二頁快完工

--- a/css/home.css
+++ b/css/home.css
@@ -1,93 +1,96 @@
-
-main{
+main {
 }
 header {
-    margin: 0 auto;
-  }
-  
-.out{
-    position: relative;
-    overflow: hidden;
-    height: 100vh;
+  margin: 0 auto;
 }
-.decorate{
+
+.out {
+  position: relative;
+  overflow: hidden;
+  height: 100vh;
+}
+.navbar-collapse {
+  justify-content: flex-end;
+}
+.decorate {
 }
 .ballonWhite1 {
-    position: absolute;
-    width: 24vh;
-    left: 4vw;
-    top: 16vw;
+  position: absolute;
+  width: 24vh;
+  left: 4vw;
+  top: 6vw;
+}
+.balloonBlack {
+  position: absolute;
+  width: 19vh;
+  top: 38vh;
+  right: 5vw;
+}
+.ribbon1 {
+  width: 34%;
+  position: absolute;
+  top: 30vh;
+  left: -14vw;
+  transform: rotate(185deg);
+}
+.ribbon2 {
+  width: 30%;
+  position: absolute;
+  top: -20vh;
+  right: -6vw;
+  transform: rotate(-34deg);
+}
+.ribbon3 {
+  width: 40%;
+  position: absolute;
+  top: 37vh;
+  left: 74vw;
+  transform: rotate(32deg);
+}
+
+.text {
+  width: 60%;
+  background-color: #7b2929;
+  height: 50%;
+  margin: 0 auto;
+  margin-top: 80px;
+}
+
+@media screen and (max-width: 414px) {
+  section {
+    margin-top: 30px;
   }
   .balloonBlack {
     position: absolute;
-    width: 19vh;
-    top: 38vh;
-    right: 5vw;
+    width: 18vh;
+    top: 58vh;
+    right: -9vw;
   }
-  .ribbon1 {
-    width: 40%;
+  .ballonWhite1 {
     position: absolute;
-    top: 45vh;
-    left: -20vw;
-    transform: rotate(185deg);
+    width: 19vh;
+    left: -11vw;
+    top: 107vw;
   }
   .ribbon2 {
-    width: 30%;
+    width: 75%;
     position: absolute;
-    top: -20vh;
-    right: -6vw;
-    transform: rotate(-34deg);
+    top: 60vh;
+    right: -5vw;
+    transform: rotate(-11deg);
   }
-  .ribbon3{
+  .ribbon1 {
     width: 70%;
     position: absolute;
     top: -5vh;
     left: 60vw;
     transform: rotate(185deg);
   }
-
-  .text{
-    width: 60%;
-    background-color: #7b2929;
-    height: 50%;
-    margin: 0 auto;
-  }
-
-@media screen and (max-width: 414px){
-    section{
-        margin-top: 30px;
-    }
-    .balloonBlack{
-        position: absolute;
-    width: 18vh;
-    top: 58vh;
-    right: -9vw;
-    }
-    .ballonWhite1{
-        position: absolute;
-    width: 19vh;
-    left: -11vw;
-    top: 107vw;
-    }
-    .ribbon2{
-        width: 75%;
-        position: absolute;
-        top: 60vh;
-        right: -5vw;
-        transform: rotate(-11deg);
-    }
-    .ribbon1{
-        width: 70%;
+  .ribbon3 {
+    width: 70%;
     position: absolute;
-    top: -5vh;
-    left: 60vw;
-    transform: rotate(185deg);
-    }
-    .ribbon3{
-        width: 70%;
-        position: absolute;
-        top: 68vh;
-        left: -37vw;
-        transform: rotate(171deg);
-    }
+    top: 68vh;
+    left: -37vw;
+    transform: rotate(171deg);
+  }
 }
