讚讚 按鈕改好了

--- a/css/home.css
+++ b/css/home.css
@@ -50,10 +50,27 @@ header {
 
 .text {
   width: 60%;
-  background-color: #7b2929;
+  background-color: #dbdbdb;
   height: 50%;
   margin: 0 auto;
   margin-top: 80px;
+}
+.nav-link {
+    color: rgb(106, 83, 11);
+}
+.active{
+    color: rgb(255, 255, 255);
+    background-image: linear-gradient(160deg, #735704 , #f3c435); 
+    border: none;
+    cursor: pointer;
+}
+
+.nav-link:hover{
+    color: #735704 ;
+}
+.active:hover{
+    background-image: linear-gradient(320deg, #735704 , #f3c435); 
+    color: rgb(255, 255, 255);
 }
 
 @media screen and (max-width: 414px) {
