--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,42 @@
 body {
   background: linear-gradient(-10deg, #d0dcf2 70%, transparent 90%);
     background-size: cover;
-  height: 100vh;
   overflow: hidden;
   position: relative;
+  line-height: 1.3;
+  height: 100%;
 }
 .logo {
-    width: 20%;
+    width: 15%;
     margin-left: 10px;
   }
   .container-fluid {
     margin: 0 10%;
   }
 
+  .btn-lg {
+    margin: 5vh 0;
+    color: rgb(255, 255, 255);
+    background-image: linear-gradient(160deg, #735704 , #f3c435); 
+    border: none;
+    cursor: pointer;
+}
+
+.btn{
+    color: rgb(255, 255, 255);
+    background-image: linear-gradient(160deg, #735704 , #f3c435); 
+    border: none;
+    cursor: pointer;
+}
+
+.btn-close-white{
+    color: rgb(255, 255, 255);
+}
+
+.btn:hover {
+    background-image: linear-gradient(320deg, #735704 , #f3c435); 
+    color: rgb(255, 255, 255);
+}
 
 
   @media screen and (max-width: 414px) {
