--- a/css/home.css
+++ b/css/home.css
@@ -1,17 +1,16 @@
 main {
   height: 100vh;
 }
-header {
-  margin: 0 auto;
+body{
+  overflow: hidden;
+
 }
 
 .out {
   position: relative;
   overflow: hidden;
 }
-.navbar-collapse {
-  justify-content: flex-end;
-}
+
 .decorate {
 }
 .ballonWhite1 {
@@ -55,26 +54,7 @@ header {
 
 .card-img-top{
 }
-.nav-link {
-    color: rgb(106, 83, 11);
-}
-.active{
-    color: rgb(255, 255, 255);
-    background-image: linear-gradient(160deg, #735704 , #f3c435); 
-    border: none;
-    cursor: pointer;
-}
 
-.nav-link:hover{
-    color: #735704 ;
-}
-.active:hover{
-    background-image: linear-gradient(320deg, #735704 , #f3c435); 
-    color: rgb(255, 255, 255);
-}
-.btn-lg {
-  margin: 0;
-}
 
 @media screen and (max-width: 414px) {
   section {
