--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,6 @@ section {
     height: 100%;
   justify-content: center;
   line-height: 1.3;
-
 }
 
 .banner {
@@ -15,7 +14,7 @@ section {
     background-image: url(../img/ribbon.png);
     background-size: auto;
     background-repeat: no-repeat;
-    height: 100%;
+    /* height: 100%; */
 }
 .indexBalloon {
     height: 100vh;
@@ -39,7 +38,7 @@ section {
   width: 10vw;
 }
 .btn-lg {
-    margin: 5vh 0;
+    margin: 3vh 0;
     color: rgb(255, 255, 255);
     background-image: linear-gradient(160deg, #735704 , #f3c435); 
     border: none;
@@ -69,25 +68,25 @@ section {
         flex-direction: column-reverse;
         align-items: center;
         background-size: cover;
-        height: 100%;
         background-position-x: 2px;
         background-position-y: -43px;
+        overflow: hidden;
       }
       .title{
-        margin-top: 10px;
+        margin-top: 4px;
       }
 
       .titlehappy {
-        width: 30vw;
+        width: 25vw;
       }
       .titlebirthday {
         width: 90vw;
       }
       .titletoyou {
-        width: 30vw;
+        width: 25vw;
       }
 
   .indexBalloon {
-    height: 58vh;
+    height: 50vh;
   }
 }
