--- a/css/index.css
+++ b/css/index.css
@@ -2,9 +2,10 @@
 
 section {
     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);    
-    height: 100%;
+    height: 100vh;
   justify-content: center;
   line-height: 1.3;
+overflow: hidden;
 }
 
 .banner {
